# tpo-coursework

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/core/: cnn.h  trainer.h
include/dataset/: euro_sat_dataset.h  images_dataset.h
include/layers/: convolutional.h  fc.h  layer.h  pool.h
include/utils/: benchmark.h  calc_layer_dim.h  cuda_utils.h  image_utils.h  prepare_data.h  prepare_model.h  timer.h
src/: main.cu
src/core/: cnn.cu  trainer.cu
src/dataset/: euro_sat_dataset.cu  images_dataset.cu
src/layers/: convolutional.cu  fc.cu  pool.cu
src/utils/: benchmark.cu  calc_layer_dim.cu  image_utils.cu  prepare_data.cu  prepare_model.cu  timer.cu
